system/rules.v4
# Generated by iptables-save v1.8.2 on Mon Nov  2 17:40:29 2020
*filter
:INPUT DROP [126:13454]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [112:9984]
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A INPUT -i tun+ -j DROP
-A INPUT -i lo   -p udp --dport 161    -j ACCEPT
-A INPUT -i lo   -p tcp --dport 22    -j ACCEPT
-A INPUT -i lo   -p tcp --dport 80    -j ACCEPT
-A INPUT -i lo   -p tcp --dport 3000  -j ACCEPT
-A INPUT -i lo   -p tcp --dport 3306  -j ACCEPT
-A INPUT -i lo   -p tcp --dport 4822  -j ACCEPT
-A INPUT -i lo   -p tcp --dport 8080  -j ACCEPT
-A INPUT -i lo   -p tcp --dport 8086  -j ACCEPT
-A INPUT -i lo   -p tcp --dport 8088  -j ACCEPT
-A INPUT -i lo   -p tcp --dport 8181  -j ACCEPT
-A INPUT -i lo   -p tcp --dport 8686  -j ACCEPT
-A INPUT -i lo   -p tcp --dport 8888  -j ACCEPT
-A INPUT -i lo   -p tcp --dport 65500 -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 22    -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 80    -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 3306  -j ACCEPT
-A INPUT -i eth0 -p udp --dport 41194 -j ACCEPT
-A INPUT -i eth0 -p udp --dport 41195 -j ACCEPT
COMMIT
# Completed on Mon Nov  2 17:40:29 2020
